<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/tv_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:adjustViewBounds="true"
        />
    <TextView
        android:id="@+id/desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_below="@id/tv_image"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_label"
        android:layout_below="@id/desc_label"
        android:text="@string/name"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name"
        android:hint="name here"
        android:layout_below="@id/desc_label"
        android:layout_alignEnd="@id/desc_label"
        />

    <TextView
        android:id="@+id/detailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:hint="@string/detail_text_here"
        android:textColor="@android:color/black"
        />








</RelativeLayout>